# AT_TEMPORAL_PROTOTYPE

./: README.md  compose.yaml
package/: pyproject.toml
package/nginx/: Dockerfile  conf.nginx
package/prototype/: Dockerfile
src/: ResourceParameters.xml  TrafficAccidentsKB.kbs  config.yaml  knowledge_base.xml  sm_run.xml
